gtk+2.0 (2.15.5-3) UNRELEASED; urgency=low

  [ Emilio Pozuelo Monfort ]
  * Let libgtk2.0-0 suggest gvfs, as it's needed for some APIs like
    gtk_show_uri.

  [ Josselin Mouette ]
  * libgtk2.0-0 depends on shared-mime-info. Closes: #518090.
  * Add dependent doc packages to b-d-i to ensure proper xrefs.

 -- Emilio Pozuelo Monfort <pochu@ubuntu.com>  Wed, 04 Mar 2009 11:56:57 +0100

gtk+2.0 (2.15.5-2) experimental; urgency=low

  [ Emilio Pozuelo Monfort ]
  * debian/control.in:
  - bump libglib2.0-dev build-dep requirement to >= 2.19.7
  - bump libxrandr-dev build-dep requirement to >= 1:1.2.99
  - also bump libgtk2.0-dev dependecies accordingly
    (Closes: #518078)

  [ Gustavo Noronha Silva ]
  * 042_treeview_single-focus.patch:
  - removed FIXME note, since it was explained to me that the patch is
    still necessary
  * debian/rules:
  - bumped SHVER to 2.15.5

  [ Imported from Ubuntu ]
  * 022_disable-viqr-im-for-vi-locale.patch,
    061_use_pdf_as_default_printing_standard.patch:
  - for the rationale for the PDF for printing one see:
    https://wiki.ubuntu.com/PDFasStandardPrintJobFormat

 -- Gustavo Noronha Silva <kov@debian.org>  Tue, 03 Mar 2009 21:58:20 -0300

gtk+2.0 (2.15.5-1) experimental; urgency=low

  * New upstream development release
  * 070_mandatory-relibtoolize.patch: refreshed.
  * 031_directfb_dead-keys.patch, 032_gdkwindowimpl_directfb.patch,
    033_directfb_client-message.patch, 034_directfb_memleak.patch,
    071_jasper_link_fix.patch, 092_fix_printtest_include.patch:
  - dropped; already featured in this release
  * 030_gtkentry_password-char-circle.patch:
  - dropped; upstream provides a different solution to setting the default
    invisible char now, that takes the font being used into consideration
  * 003_gdk.pc_privates.patch:
  - refreshed

 -- Gustavo Noronha Silva <kov@debian.org>  Mon, 02 Mar 2009 22:01:03 -0300

gtk+2.0 (2.14.7-3) experimental; urgency=low
